# esp_miniboard_lvgl

./: README.md  partitions.csv
components/Application/: CMakeLists.txt  addr_from_stdin.c  connect.c  https.c  https.h  peripheral_init.c  peripheral_init.h  sntp_time.c  sntp_time.h  stdin_out.c  wifi.c  wifi.h
components/lv_lib_split_jpg/: CMakeLists.txt  lv_sjpg.c  lv_sjpg.h
components/lv_lib_split_jpg/scripts/: cloud.sjpg  gzh.sjpg  qr_code.sjpg  test.sjpg
components/lvgl/: lv_conf_template.h
components/lvgl_esp32_drivers/lvgl_tft/: ili9341.c
components/lvgl_generated/: CMakeLists.txt  gui_guider.c  gui_guider.h  setup_scr_screen.c
components/lvgl_generated/guider_fonts/: guider_fonts.h  lv_font_montserratMedium_13.c  lv_font_montserratMedium_20.c  lv_font_montserratMedium_25.c  lv_font_montserratMedium_29.c  lv_font_simsun_12.c  lv_font_simsun_19.c
components/lvgl_generated/images/: _Pm3XE4eMqr_jpg_alpha_48x55.c  _cloud2_alpha_89x88.c  _dabai_alpha_100x100.c  _mini_board_alpha_223x223.c  _shidu_jpg_alpha_40x55.c  _wx_alpha_170x169.c  cloud.c  gzh.c  images.mk  qr_code.c  test.c
components/lvgl_gui/: CMakeLists.txt  font.c  lvgl_gui.c  lvgl_gui.h
components/lvgl_gui/images/: cloudy.c  dabai.c  duoyun.c  humidity.c  image.h  qing.c  sunny.c  temperature.c
components/lvgl_gui/userfont/: user_fonts_songti_10.c  user_fonts_songti_15.c  user_fonts_songti_20.c  user_fonts_symbol_10.c  user_fonts_symbol_15.c  user_fonts_youyuan_13.c  user_fonts_youyuan_25.c  userfont.h
main/: CMakeLists.txt  main.c
